fix: add proper alignment for the text inside Split button (#2150)
* fix: add proper alignment for the text inside Split button

* [ci visual]

--- a/src/button-split.scss
+++ b/src/button-split.scss
@@ -78,6 +78,14 @@ $fd-button-split-margin: 0.125rem / 2;
   }
 
   & > :first-child {
+    @include fd-flex-vertical-center() {
+      justify-content: flex-start;
+    }
+
+    .#{$block}__text {
+      display: inline-block;
+    }
+
     &:hover {
       .#{$block}__text {
         color: var(--sapButton_TextColor);
@@ -85,7 +93,6 @@ $fd-button-split-margin: 0.125rem / 2;
     }
 
     &:active {
-
       .#{$block}__text {
         color: var(--sapButton_Selected_TextColor);
       }
